sent to james for comments

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,17 +1,17 @@
 @inproceedings{Ha:TowardsWearableCogAssist,
  author = {K. Ha and Z. Chen and W. Hu and W. Richter and P. Pillai and M. Satyanarayanan},
- title = {Towards Wearable Cognitive Assistance},
+ title = {{Towards Wearable Cognitive Assistance}},
  booktitle = {Proceedings of the 12th Annual International Conference on Mobile Systems, Applications, and Services},
 }
 
 @inproceedings{Chen:AnEmpiricalStudyOfLatency,
  author = {Z. Chen and W. Hu and J. Wang and S. Zhao and B. Amos and G. Wu and K. Ha and K. Elgazzar and P. Pillai and R. Klatzky and D. Siewiorek and M. Satyanarayanan},
- title = {An Empirical Study of Latency in an Emerging Class of Edge Computing Applications for Wearable Cognitive Assistance},
+ title = {{An Empirical Study of Latency in an Emerging Class of Edge Computing Applications for Wearable Cognitive Assistance}},
  booktitle = {Proceedings of the Second ACM/IEEE Symposium on Edge Computing},
 }
 
 @article{satya2009case,
-  title={The case for vm-based cloudlets in mobile computing},
+  title={{The Case for {VM-based} Cloudlets in Mobile Computing}},
   author={M. Satyanarayanan and P. Bahl and R. Caceres and N. Davies},
   journal={IEEE Pervasive Computing},
   volume={8},
@@ -21,15 +21,14 @@
 }
 
 @article{Bittmann_Edge,
-    title={The Edge Will Eat the Cloud},
+    title={{The Edge Will Eat the Cloud}},
     author={T. Bittmann},
     journal={Gartner Research},
-    number={G00338633},
     year={2017}
 }
 
-@INPROCEEDINGS{Sasaki:2017,
-    author={K. Sasaki and N. Suzuki and S. Makido and A. Nakao},
-    booktitle={Proceedings of the 2017 IEEE Conference on Network Softwarization (NetSoft)},
-    title={Layered vehicle control system coordinated between multiple edge servers},
+@inproceedings{Chen:EarlyImplementation,
+    author = {Z. Chen and L Jiang and W. Hu and K. Ha and B. Amos and P. Pillai and A. Hauptmann and M. Satyanarayanan},
+    title = {{Early Implementation Experience with Wearable Cognitive Assistance Applications}},
+    booktitle = {Proceedings of the 2015 Workshop on Wearable Systems and Applications},
 }
