update with james comments

--- a/poster.tex
+++ b/poster.tex
@@ -101,7 +101,7 @@ mincitenames=1]{biblatex}
             \begin{center}
                 \medskip
                 \includegraphics[width=.9\linewidth]{img/TraceReplay_GenArch}
-                \captionof{figure}{Suite Architecture}
+                \captionof{figure}{EdgeDroid Architecture}
                 \medskip
             \end{center}
             \begin{itemize}
@@ -122,7 +122,7 @@ mincitenames=1]{biblatex}
 
             We implement a very simple user model in order to be able to react to feedback from the application and adapt our replay of the trace to the current system conditions.
             In EdgeDroid 1.0, our model is that of a user who does not suffer any of the shortcomings of real human users such as annoyance, fatigue, frustration, nausea.            
-            In the future, we envision creating  many versions of EdgeDroid (i.e., EdgeDroid 2.0, EdgeDroid 3.0, etc.) that embody more human-like user models that more accurately emulate attributes such as those mentioned above. 
+            In the future, we envision creating  more versions of EdgeDroid (i.e., EdgeDroid 2.0, EdgeDroid 3.0, etc.) that embody more human-like user models that more accurately emulate attributes such as those mentioned above. 
         \end{pframe}%    
     \end{pcolumn}%
     \begin{pcolumn}[2]
